DDT-1102: Port excel export endpoint